SBVTestSuite/TestSuite/CompileTests/SCase/SCase07.stderr
SCase07.hs:11:14: error: [GHC-39584]
    " sCase: Pattern guards are not supported: 
        Just 1 <- Just i

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero          -> 0
               Num i | Just 1 <- Just i         -> i
               Var s        -> ite (s .== "a") 1 2
               Add a b       -> t e + t b
               Let _   _a  b -> t b
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

